fix: added horizontal scrolling for responsiveness of table view

--- a/src/features/components/characters/Characters.module.css
+++ b/src/features/components/characters/Characters.module.css
@@ -8,7 +8,8 @@
     background: #fff;
     border-radius: 10px;
     padding: 0.5rem 0;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.04);  
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.04);
+    overflow-x: auto
 }
 
 .table {
